[package]
name = "ameliorator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = "2.1.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
html-escape = "0.2.11"
chrono = "0.4.22"
openai-api = { git = "https://github.com/anchpop/openai-api-rust.git", rev = "bf2937f" }
tokio-compat-02 = "0.2"